# otel-examples

./: Cargo.toml  README.md
src/: ext.rs  main.rs  setup.rs
