[package]
name = "otel_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"], path = "../../repos/tracing/tracing-subscriber"}
# tracing = { version = "0.1.40", path = "../../repos/tracing/tracing"}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40" }
clap = { version = "4.4.18", features = ["derive"] }
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14.0"
tracing-opentelemetry = "0.22.0"
tokio-native-tls = "0.3.1"
native-tls = { version = "0.2.11", features = ["alpn"] }
tonic = { version = "0.9.2", features = ["transport"] }
http = "1.0.0"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
